--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -54,6 +55,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "msw": "^2.4.2",
     "prettier": "^3.3.3",
+    "sass": "^1.78.0",
     "typescript": "^4.9.5"
   }
 }
