--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.104",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -49,6 +45,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.13",
     "@types/react-router-dom": "^5.3.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -56,6 +57,12 @@
     "msw": "^2.4.2",
     "prettier": "^3.3.3",
     "sass": "^1.78.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^4.9.5"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios)/"
+    ]
   }
 }
